Wed Apr 15 10:32:41 1992  Inge Wallin  (inge@robert)

	* cache.el(lyskom-set-who-info-buffer-2): Use insert instead of
	  lyskom-insert in the who-buffer.  Send 'insert to the call to
	  lyskom-print-who-info. 

	* commands1.el(lyskom-print-who-info): Take new optional parameter
	  INSERT-FUNCTION telling which function to use for text insertion
	  into the buffer.  Use lyskom-insert as default.

Tue Mar 24 03:03:41 1992  Lars Willf|r  (willfor@lysator)

	* lyskom-rest.el: Har lagt in s} att den s{tter lyskom-last-viewed
	  i lyskom-start-of-command. Borde g|ra s} att scrollningen funkar
	  b{ttre.

Mon Mar 23 00:09:41 1992  Linus Tolke Y  (linus@robert)

	* Distribuerat version 0.34.4	 	   23:00

Thu Mar 12 04:23:51 1992  Linus Tolke Y  (linus@ruben)

	* async.el, cache.el (logga ut, logga in): Nu klarar who-bufferten
	  ocks} snabba in och utloggningar. (Postmaster). Det var lite
	  problem annars om man hinner logga ut innan klienten hinner sl}
	  upp namnet p} personen den skall stoppa in i who-bufferten.

Sat Mar  7 20:36:07 1992  Lars Willf|r  (willfor@robert)

	* lyskom-rest.el: Skrev om scroll-rutinerna och point-flyttningen
	  i lyskom-insert. Nu ska klienten inte bugga ur d} raderna {r
	  l{ngre {n sk{rmraderna.

Fri Mar  6 16:49:24 1992  Linus Tolke Y  (linus@robert)

	* commands1.el (kom-add-recipient, kom-add-copy,
	  kom-sub-recipient, lyskom-add-sub-rcpt,
	  lyskom-add-sub-recipient, lyskom-add-sub-recipient-2):
	  vars.el (lyskom-last-added-rcpt, lyskom-last-added-ccrcpt):
	  Added defaults for subtract, add recipient.

Sat Feb 29 00:37:24 1992  Per Cederqvist  (ceder@lysator)

	* swedish-strings.el (lyskom-mode-map): Bound
	  kom-private-answer-previous to "P".

	* commands1.el (kom-private-answer-previous): New command.

Sat Jan 25 00:47:53 1992  Linus Tolke Y  (linus at ruben)

	* swedish-strings.el (kom-page-next-command): Nu {ven bunden till
	  "j".

	* commands1.el (lyskom-change-name): A quit in the reading of the